Quoted fields read

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 dev.read.mode = dropmalformed
 dev.header.exists = false
+dev.quote.type = \"
 dev.file.format = csv
 dev.non.null.columns = 1,3
 dev.non.string.columns = 1,3
@@ -16,6 +17,7 @@ dev.output.path = /Users/jdsatpathy/retail_db/orders/
 
 prod.read.mode = dropmalformed
 prod.header.exists = false
+prod.quote.type = \"
 prod.file.format = csv
 prod.non.null.columns = 0,2
 prod.non.string.columns = 0,2
